--- a/frontend/src/Register.css
+++ b/frontend/src/Register.css
@@ -1,12 +1,22 @@
+html,
+body,
+#root {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+}
+
 body {
-	margin: 0;
-	padding: 0;
-	font-family: 'Roboto', sans-serif;
 	background-color: #181818;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	height: 100vh;
+}
+
+.header {
+	margin-top: 1rem;
+	margin-bottom: 1rem;
 }
 
 .register-container {
@@ -20,6 +30,8 @@ body {
 .register-box {
 	background-color: #ffffff;
 	padding: 2rem;
+	margin-right: 2rem;
+	margin-left: 2rem;
 	border-radius: 8px;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 	max-width: 400px;
